--- a/NEWS
+++ b/NEWS
@@ -117,7 +117,8 @@ Geany 1.23 (unreleased)
 
     Internationalization
     * Add translations: et, eu, he, hi, sr
-    * Update translations: cs, de, es, fi, gl, it, lt, nl, ru, sv, sl, tr
+    * Update translations: cs, de, es, fi, gl, it, kk, lt, nl, 
+                           pt_BR, ru, sv, sl, tr
     * Fix a crash when using the Turkish translation.
 
 
