--- a/NEWS
+++ b/NEWS
@@ -2,11 +2,11 @@ Geany 1.23 (unreleased)
 
     General
     * Scope detection now finds classes and namespaces (#1996778).
-    * Various fixes to language theming.
+    * Various fixes to language theming (#3573213).
     * Various Windows makefile fixes.
     * Rewrite printing code (#2629121, #2804000, #3475444, #3580268,
       #3580269).
-    * Use the Geany icon from the theme.
+    * Use the Geany icon from the theme (#3576695).
     * Make Geany-specific icons themeable.
 
     Bug fixes
@@ -14,7 +14,8 @@ Geany 1.23 (unreleased)
     * Fix showing project name in the Documents sidebar.
     * Fix opening filenames with leading or trailing space from the
       command line into a running instance.
-    * Fix re-opening files with unknown but detected encoding.
+    * Fix re-opening files with unknown but detected encoding
+      (#3509407, #3605293).
     * Fix crash when loading a broken or incompatible VTE library.
     * Report scope including classes, namespaces and alike (#1996778).
     * Fix cancelling Project Close when showing the unsaved changes
@@ -24,6 +25,7 @@ Geany 1.23 (unreleased)
     * Fix some keybinding not getting properly displayed in the menus
       after being updated (#1912683, #3599251).
     * Make Terminal tool setting more flexible to support any terminal.
+    * Fix replacing file name in files header upon save.
 
     Interface
     * Control-click on the symbols sidebar don't focus the editor.
@@ -33,7 +35,7 @@ Geany 1.23 (unreleased)
     * Replace 'Open file in a new tab' save dialog option with new
       'Document->Clone' menu item.
     * Fix clashing button mnemonic in detect/reload dialog (#3587465).
-    * Grab focus in the embedded terminal upon middle click.
+    * Grab focus in the embedded terminal upon middle click (#3574724).
     * Add support for embedded terminal background image (Mislav
       Blažević).
 
@@ -57,6 +59,7 @@ Geany 1.23 (unreleased)
     * Clear search markers on Mark All keybinding when already set.
     * Never strip trailing spaces for Diff documents.
     * Reduce unnecessary redraws when typing (Evandro Borracini).
+    * Fix comment toggling inside PHP and HTML with bottom-up selection.
 
     Search
     * 'Mark All' now also uses the fully-featured PCRE engine
@@ -77,15 +80,17 @@ Geany 1.23 (unreleased)
     * Add more keywords to Forth (Oco).
     * Add some missing Haxe keywords (#3448664).
     * Add some missing CSS3 keywords (Trong Thanh Tran).
+    * Add some missing D keywords (#3595187) (Felix Totir).
     * Fix a crash parsing some C macros (#3556536).
     * Update some Python keywords.
     * Update Python global tags file.
     * Show VHDL blocks in the symbol list.
-    * Fix ruby scope after "do".
+    * Fix ruby scope after "do" (#3046418).
     * Fix parsing of ruby keywords when followed by a semicolon
       (#2130612).
     * Lots of JavaScript symbols parsing improvements (#2992393,
-      #3036476, #3398636, #3470609, #3568542, #3570192).
+      #3034303, #3034339, #3036476, #3398636, #3470609, #3568542,
+      #3570192, #3571233).
     * Use "scala" extension for Scala (#3574723).
     * Fix parsing of reStructuredText titles containing UTF-8
       characters (#3578050).
@@ -103,23 +108,26 @@ Geany 1.23 (unreleased)
     * Add more HTML5 self-closing tags (Duncan de Wet).
     * Update default D template to use a more standard prototype for
       main().
+    * Fix improperly translated string in Pascal template (#3602314).
 
     Plugins
     * Export: Fix missing linking on libm (Chow Loong Jin)
     * File Browser: Backspace now moves to parent directory.
 
     API:
-    * Fix plugin_add_toolbar_item() insertion order (Dimitar Zhekov).
+    * Fix plugin_add_toolbar_item() insertion order (#3522755)
+      (Dimitar Zhekov).
 
     Windows
     * Fix spawning synchronous commands on Windows.
     * Show Find in Files status summary.
+    * Add icon to the Explorer context menu item.
 
     Internationalization
     * Add translations: et, eu, he, hi, sr
     * Update translations: ca, cs, de, es, fi, gl, it, kk, lt, nl, 
                            pt_BR, ru, sv, sl, tr
-    * Fix a crash when using the Turkish translation.
+    * Fix a crash when using the Turkish translation (#3560181).
 
 
 Geany 1.22 (June 18, 2012)
