Set release date

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Geany 1.23 (unreleased)
+Geany 1.23 (March 10, 2013)
 
     General
     * Scope detection now finds classes and namespaces (#1996778).
