--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,6 @@
 Geany 1.23 (March 10, 2013)
 
     General
-    * Scope detection now finds classes and namespaces (#1996778).
     * Various fixes to language theming (#3573213).
     * Various Windows makefile fixes.
     * Rewrite printing code (#2629121, #2804000, #3475444, #3580268,
@@ -12,7 +11,7 @@ Geany 1.23 (March 10, 2013)
     Bug fixes
     * Fix too aggressive scope caching (#2142789, #2667917, #2868850).
     * Fix showing project name in the Documents sidebar.
-    * Fix opening filenames with leading or trailing space from the
+    * Fix opening filenames with leading or trailing spaces from the
       command line into a running instance.
     * Fix re-opening files with unknown but detected encoding
       (#3509407, #3605293).
@@ -27,11 +26,11 @@ Geany 1.23 (March 10, 2013)
     * Make Terminal tool setting more flexible to support any terminal.
     * Fix replacing file name in files header upon save.
     * Fix UAC Virtualization issue on newer Windows versions when trying
-      so save files to read-only locations (#3566329, #3515490).
+      to save files to read-only locations (#3566329, #3515490).
 
     Interface
     * Control-click on the symbols sidebar don't focus the editor.
-    * Add an option to place message window on the right.
+    * Add an option to place the message window on the right.
     * Fix display of non-ASCII tags in the symbols tree for non-UTF-8
       files.
     * Replace 'Open file in a new tab' save dialog option with new
@@ -52,14 +51,14 @@ Geany 1.23 (March 10, 2013)
     * Fix multiline comments at end of file (#3026691).
     * Keep caret and anchor position upon indent and unindent
       (#3167355).
-    * Complete on dash (-) too in CSS.
+    * Complete on dash (-) too in CSS documents.
     * Make wordchars have precedence over whitespacechars (#3429368).
     * Fix cursor position after comment toggling with no selection
       (#3576431).
     * Fix reshowing calltip after autocompletion list closed.
     * Fix uncommenting multiline comments when cursor is on a delimiter.
     * Clear search markers on Mark All keybinding when already set.
-    * Never strip trailing spaces for Diff documents.
+    * Never strip trailing spaces from Diff documents.
     * Reduce unnecessary redraws when typing (Evandro Borracini).
     * Fix comment toggling inside PHP and HTML with bottom-up selection.
 
@@ -101,7 +100,7 @@ Geany 1.23 (March 10, 2013)
       (#3578557).
     * Fix highlighting of C++11 raw strings (#3578557).
     * Fix parsing of colons in D (#3577788).
-    * Fix parsing D 'static assert' (#3582833).
+    * Fix parsing of D 'static assert' (#3582833).
     * Parse scope for D nested template blocks (#3582833).
     * Ignore D angle brackets.
     * Fix reStructuredText comment marker (#3585377).
@@ -111,7 +110,7 @@ Geany 1.23 (March 10, 2013)
     * Update default D template to use a more standard prototype for
       main().
     * Fix improperly translated string in Pascal template (#3602314).
-    * Add Go language filetype (tomboy64)
+    * Add Go language filetype (tomboy64).
 
     Plugins
     * Export: Fix missing linking on libm (Chow Loong Jin)
