Update of German translation

--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,7 @@ Geany 1.24 (unreleased)
     * Extend list of recognized keywords for SQL
 
     Internationalization
-    * Update translations: he
+    * Update translations: de, he
 
 
 Geany 1.23.1 (May 19, 2013)
