--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1175,11 +1175,11 @@ msgstr "Removes trailing spaces and tabs and the end of lines"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
 msgid "Replace tabs by space"
-msgstr "Replace tabs by space"
+msgstr "Replace tabs with space"
 
 #: ../data/geany.glade.h:244
 msgid "Replaces all tabs in document by spaces"
-msgstr "Replaces all tabs in document by spaces"
+msgstr "Replaces all tabs in document with spaces"
 
 #: ../data/geany.glade.h:245
 msgid "<b>Saving files</b>"
@@ -2012,11 +2012,11 @@ msgstr "_Strip Trailing Spaces"
 
 #: ../data/geany.glade.h:434
 msgid "_Replace Tabs by Spaces"
-msgstr "_Replace Tabs by Spaces"
+msgstr "_Replace Tabs with Spaces"
 
 #: ../data/geany.glade.h:435
 msgid "Replace Spaces b_y Tabs"
-msgstr "Replace Spaces b_y Tabs"
+msgstr "Replace Spaces with Tabs"
 
 #: ../data/geany.glade.h:436
 msgid "_Fold All"
