--- a/data/filetypes.latex
+++ b/data/filetypes.latex
@@ -25,6 +25,9 @@ primary=above abovedisplayshortskip abovedisplayskip abovewithdelims accent adjd
 # default extension used when saving files
 extension=tex
 
+# MIME type
+mime_type=text/x-tex
+
 # the following characters are these which a "word" can contains, see documentation
 #wordchars=_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
 
