--- a/po/es.po
+++ b/po/es.po
@@ -1146,11 +1146,11 @@ msgid "Replace Spaces b_y Tabs"
 msgstr "Reemplazar _espacios por tabulaciones"
 
 #: ../data/geany.glade.h:251 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Reemplazar tabulaciones por espacios"
 
 #: ../data/geany.glade.h:252
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Reemplaza todas las tabulaciones en el documento por espacios"
 
 #: ../data/geany.glade.h:253
@@ -2078,7 +2078,7 @@ msgid "_Replace"
 msgstr "_Reemplazar"
 
 #: ../data/geany.glade.h:444
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "_Reemplazar tabulaciones por espacios"
 
 #: ../data/geany.glade.h:445
@@ -3669,7 +3669,7 @@ msgid "Toggle Line breaking"
 msgstr "Activar/desactivar salto de línea"
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Reemplazar espacios por tabulaciones"
 
 #: ../src/keybindings.c:573
