--- a/po/hi.po
+++ b/po/hi.po
@@ -1095,11 +1095,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "अनुगामी रिक्त स्थान और टैब और लाइनों के अंत निकालता"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr ""
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:245
@@ -1891,7 +1891,7 @@ msgid "_Strip Trailing Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:435
@@ -3464,7 +3464,7 @@ msgid "Toggle Line breaking"
 msgstr ""
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr ""
 
 #: ../src/keybindings.c:573
