--- a/po/ar.po
+++ b/po/ar.po
@@ -1092,11 +1092,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr ""
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "استبدل الإزاحات بالمسافات"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "استبدل كل الإزاحات بالمستند إلى مسافات"
 
 #: ../data/geany.glade.h:245
@@ -1889,7 +1889,7 @@ msgid "_Strip Trailing Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "استبدل الإزاحات بالمسافات"
 
 #: ../data/geany.glade.h:435
@@ -3470,7 +3470,7 @@ msgid "Toggle Line breaking"
 msgstr ""
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "استبدل المسافات بالإزاحات"
 
 #: ../src/keybindings.c:573
