--- a/po/be.po
+++ b/po/be.po
@@ -1186,11 +1186,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Выдаляць завяршаючыя прабелы на канцах радкоў"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Змяніць адступы на прабелы"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Змяніць усе адступы ў дакуменце на прабелы"
 
 #: ../data/geany.glade.h:245
@@ -2018,7 +2018,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "Выдаляць завяршаючыя прабелы"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "Змяняць адступы на прабелы"
 
 #: ../data/geany.glade.h:435
@@ -3643,7 +3643,7 @@ msgid "Toggle Line breaking"
 msgstr "Перамкнуць абрыў радкоў"
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Змяняць прабелы адступамі"
 
 #: ../src/keybindings.c:573
