--- a/po/et.po
+++ b/po/et.po
@@ -1098,11 +1098,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Rea lõpud puhastatakse tühikutest ja tabeldusmärkidest"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Asenda tabeldusmärgid tühikutega"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Kõik tabeldusmärgid asendatakse tühikutega"
 
 #: ../data/geany.glade.h:245
@@ -1892,7 +1892,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "_Realõputühikute eemaldamine"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "_Asenda tabeldusmärgid tühikutega"
 
 #: ../data/geany.glade.h:435
@@ -3479,7 +3479,7 @@ msgid "Toggle Line breaking"
 msgstr ""
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Asenda tühikud tabeldusmärkidega"
 
 #: ../src/keybindings.c:573
