--- a/po/eu.po
+++ b/po/eu.po
@@ -1101,11 +1101,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr ""
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Ordezkatu tabulazioak zuriuneekin"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Dokumentuko tabulazio guztiak zuriuneekin ordezkatzen ditu"
 
 #: ../data/geany.glade.h:245
@@ -1898,7 +1898,7 @@ msgid "_Strip Trailing Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "_Ordezkatu tabulazioak zuriuneekin"
 
 #: ../data/geany.glade.h:435
@@ -3485,7 +3485,7 @@ msgid "Toggle Line breaking"
 msgstr ""
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Ordezkatu zuriuneak tabulazioekin"
 
 #: ../src/keybindings.c:573
