--- a/po/fi.po
+++ b/po/fi.po
@@ -1170,11 +1170,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Poistaa ylimääräiset välilyönnit ja sarkaimet rivien lopusta"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Korvaa sarkaimet välilyönneillä"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Korvaa kaikki asiakirjan sarkaimet välilyönneillä"
 
 #: ../data/geany.glade.h:245
@@ -1995,7 +1995,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "_Poista tyhjä tila rivien lopusta"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "Korvaa _sarkaimet välilyönneillä"
 
 #: ../data/geany.glade.h:435
@@ -3623,7 +3623,7 @@ msgid "Toggle Line breaking"
 msgstr "Rivien katkaisu päälle/pois"
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Korvaa sarkaimet välilyönneillä"
 
 #: ../src/keybindings.c:573
