--- a/po/hu.po
+++ b/po/hu.po
@@ -1016,11 +1016,11 @@ msgstr "Levágja a sorvégi szóköz és tabulátor karaktereket"
 
 #: ../data/geany.glade.h:243
 #: ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Tabulátorok cseréje szóközre"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "A dokumentumban az összes tabulátort szóközökre cseréli."
 
 #: ../data/geany.glade.h:245
@@ -1819,7 +1819,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "_Sorvégi szóközök levágása"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "_Tabulátorok cseréje szóközre"
 
 #: ../data/geany.glade.h:435
@@ -3492,7 +3492,7 @@ msgid "Toggle Line breaking"
 msgstr "Sor széttördelés be/kikapcsolása"
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Szóközök cseréje tabulátorokra"
 
 #: ../src/keybindings.c:573
