--- a/po/lt.po
+++ b/po/lt.po
@@ -1158,11 +1158,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Eilutės pabaigoje pašalina tarpus ir tabuliavimo ženklus"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Pakeisti tabuliavimo ženklus tarpu"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Pakeičia visus tabuliavimo ženklus tarpu"
 
 #: ../data/geany.glade.h:245
@@ -1983,7 +1983,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "_Pašalinti pradžios tarpus"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "_Pakeisti tabuliavimo simbolius tarpais"
 
 #: ../data/geany.glade.h:435
@@ -3607,7 +3607,7 @@ msgid "Toggle Line breaking"
 msgstr "Perjungti eilučių laužymą"
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Pakeisti tarpus tabuliavimo ženklais"
 
 #: ../src/keybindings.c:573
