--- a/po/ro.po
+++ b/po/ro.po
@@ -1204,12 +1204,12 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Șterge dâra de spații și tab-uri de la sfârșitul liniilor."
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Înlocuiește tab-urile cu spații"
 
 #: ../data/geany.glade.h:244
 #, fuzzy
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Înlocuiește toate tab-urile în document cu spații."
 
 #: ../data/geany.glade.h:245
@@ -2086,7 +2086,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "_Elimină dâra de spații"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "Î_nlocuiește tab-urile cu spații"
 
 #: ../data/geany.glade.h:435
@@ -3745,7 +3745,7 @@ msgstr "Încadrare linii"
 
 #: ../src/keybindings.c:571
 #, fuzzy
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Î_nlocuiește tab-urile cu spații"
 
 #: ../src/keybindings.c:573
@@ -6322,7 +6322,7 @@ msgstr ""
 #~ msgstr "Tratează fișierul ca doar pentru citire. Nu se fac modificări."
 
 #, fuzzy
-#~ msgid "Replaces all spaces in the document by tab characters."
+#~ msgid "Replaces all spaces in the document with tab characters."
 #~ msgstr "Înlocuiește toate tab-urile în document cu spații."
 
 #~ msgid "Folds all contractible code blocks"
