--- a/po/ru.po
+++ b/po/ru.po
@@ -1178,11 +1178,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Убирать лишние пробелы, табуляции и окончания строк"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Заменить табуляции пробелами"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Заменить пробелами все табуляции в документе."
 
 #: ../data/geany.glade.h:245
@@ -2012,7 +2012,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "Удалить _лишние пробелы в конце строк"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "_Заменить табуляции пробелами"
 
 #: ../data/geany.glade.h:435
@@ -3637,7 +3637,7 @@ msgid "Toggle Line breaking"
 msgstr "Переключить перенос строк"
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "Заменить пробелы табуляциями"
 
 #: ../src/keybindings.c:573
