--- a/po/sr.po
+++ b/po/sr.po
@@ -1086,11 +1086,11 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr ""
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Замени табулаторе са размацима"
 
 #: ../data/geany.glade.h:244
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Мења све табулаторе у документу са размацима"
 
 #: ../data/geany.glade.h:245
@@ -1877,7 +1877,7 @@ msgid "_Strip Trailing Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr ""
 
 #: ../data/geany.glade.h:435
@@ -3460,7 +3460,7 @@ msgid "Toggle Line breaking"
 msgstr ""
 
 #: ../src/keybindings.c:571
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr ""
 
 #: ../src/keybindings.c:573
