--- a/po/uk.po
+++ b/po/uk.po
@@ -1231,12 +1231,12 @@ msgid "Removes trailing spaces and tabs and the end of lines"
 msgstr "Прибрати пробіли та відступи після тексту на кожному рядку"
 
 #: ../data/geany.glade.h:243 ../src/keybindings.c:569
-msgid "Replace tabs by space"
+msgid "Replace tabs with space"
 msgstr "Замінити відступи пробілами"
 
 #: ../data/geany.glade.h:244
 #, fuzzy
-msgid "Replaces all tabs in document by spaces"
+msgid "Replaces all tabs in document with spaces"
 msgstr "Замінити усі відступи у документі пробілами."
 
 #: ../data/geany.glade.h:245
@@ -2117,7 +2117,7 @@ msgid "_Strip Trailing Spaces"
 msgstr "Видалити _пробіли після тексту"
 
 #: ../data/geany.glade.h:434
-msgid "_Replace Tabs by Spaces"
+msgid "_Replace Tabs with Spaces"
 msgstr "_Заміняти відступи пробілами"
 
 #: ../data/geany.glade.h:435
@@ -3807,7 +3807,7 @@ msgstr "_Перемикач закоментованості рядку"
 
 #: ../src/keybindings.c:571
 #, fuzzy
-msgid "Replace spaces by tabs"
+msgid "Replace spaces with tabs"
 msgstr "_Заміняти відступи пробілами"
 
 #: ../src/keybindings.c:573
@@ -6383,7 +6383,7 @@ msgstr ""
 #~ "Використовуйте цей файл тільки для читання. Зміна вмісту заборонена."
 
 #, fuzzy
-#~ msgid "Replaces all spaces in the document by tab characters."
+#~ msgid "Replaces all spaces in the document with tab characters."
 #~ msgstr "Замінити усі відступи у документі пробілами."
 
 #~ msgid "Folds all contractible code blocks"
